== 0.9.8 / ???

* Fix bug in the stratification algorithm
* Fix bug with insertions into stdio inside bootstrap blocks
* Improve error message when <~ applied to a collection type that doesn't
  support it (#316)
* Fix rescan logic for Zookeeper-backed collections (#317)
* Support + operator for concatenating tuples
* More consistent behavior for #==, #eql?, and #hash methods on Bud tuple
  objects (TupleStruct)
* Fix intermittent EM::ConnectionNotBound exceptions during the Bud shutdown
  sequence
* Improve stratification algorithm to be slightly more aggressive; that is, we
  can place certain rules in an earlier strata than we were previously
  (partially fixes #277)
* Add Rakefile to simplify common development operations (Joel VanderWerf, #324)

== 0.9.7 / 2013-04-22

* Avoid raising an exception when Bud is used with Ruby 2.0. There isn't
  anything special that Bud itself needs to do to support Ruby 2.0, but
  RubyParser doesn't properly support 2.0 yet. So using 2.0-only syntax in Bud
  rules is unlikely to work (until RubyParser is updated), but no other problems
  have been observed.
* Reject <= on collections from outside Bloom rules (#289, Aaron Davidson). The
  previous behavior was error-prone: inserting into a scratch collection via <=
  was not rejected but the inserted data would immediately be discarded at the
  beginning of the next tick. Hence, it is simpler to require <+ or <~ for all
  insertions from outside Bloom rules.
* Fix bug in join operators whose qualifiers reference collections defined
  inside imported modules (#301)
* Fix bug in join operators when the same table and column name appears on the
  LHS of multiple join predicates (#313)
* Fix bug in outer joins with multiple predicates (#315)
* Fix several bugs in rescan/invalidation logic for tables in the presence of
  upstream deletions (#303)
* Fix regression in file_reader collections (#304)
* Improve chaining of notin operators
* Optimize join evaluation with multiple predicates