@@ -5,6 +5,7 @@
 * Improve error message when <~ applied to a collection type that doesn't
   support it (#316)
 * Fix rescan logic for Zookeeper-backed collections (#317)
+* Fix rescan logic for chained negation operators in a single rule
 * Support + operator for concatenating tuples
 * More consistent behavior for #==, #eql?, and #hash methods on Bud tuple
   objects (TupleStruct)
